--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -1,14 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     tools:context=".fragments.CreateFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="CREATE fragment" />
+    <EditText
+        android:id="@+id/etTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="title..."
+        android:textSize="32dp"/>
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/etDescription"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:ems="10"
+        android:hint="description..."
+        android:layout_below="@id/etTitle"/>
+
+    <ImageButton
+        android:id="@+id/btnCaptureImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignEnd="@id/etDescription"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/add_photo" />
+
+    <ImageView
+        android:id="@+id/ivImageOne"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_below="@id/etDescription"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:id="@+id/ivImageTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:layout_below="@id/etDescription"
+        android:layout_toEndOf="@id/ivImageOne"
+        android:layout_marginStart="16dp"
+        tools:srcCompat="@tools:sample/avatars"/>
+
+    <Button
+        android:id="@+id/btnCreate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create!"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
