created double tap listener for adding commitments via heart icon

--- a/app/src/main/res/layout/activity_experience_details.xml
+++ b/app/src/main/res/layout/activity_experience_details.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvDetailsTitle"
-        android:text="Experience description goes here"/>
+        android:text="Experience description goes here" />
 
     <ImageView
         android:id="@+id/ivDetailsImageOne"
@@ -29,16 +29,16 @@
         android:layout_height="150dp"
         android:layout_below="@id/tvDetailsDescription"
         android:layout_alignParentStart="true"
-        android:src="@drawable/photo_blank"/>
+        android:src="@drawable/photo_blank" />
 
     <ImageView
         android:id="@+id/ivDetailsImageTwo"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_below="@id/tvDetailsDescription"
-        android:layout_toEndOf="@id/ivDetailsImageOne"
         android:layout_marginStart="16dp"
-        android:src="@drawable/photo_blank"/>
+        android:layout_toEndOf="@id/ivDetailsImageOne"
+        android:src="@drawable/photo_blank" />
 
     <Button
         android:id="@+id/btnDetailsConnectHost"
@@ -46,14 +46,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/ivDetailsImageOne"
         android:layout_centerHorizontal="true"
-        android:text="connect with host!"/>
+        android:text="connect with host!" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnDetailsAddInterest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@id/btnDetailsConnectHost"
         android:layout_centerHorizontal="true"
-        android:text="i'm interested!"/>
+        android:background="#00FFFFFF"
+        android:src="@drawable/favorite_border" />
 
 </RelativeLayout>
