--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,17 +6,56 @@
     android:layout_height="match_parent"
     tools:context=".SearchActivity">
 
-    <androidx.cardview.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <fragment android:id="@+id/autocomplete_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        />
 
-        <fragment android:id="@+id/autocomplete_fragment"
-            android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tvSearchDistanceInfo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Search for experiences within:"
+        android:layout_below="@id/autocomplete_fragment"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"/>
+
+    <RadioGroup
+        android:id="@+id/rgSearchRadius"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvSearchDistanceInfo"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
+        <RadioButton
+            android:id="@+id/rb10miles"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-            />
-    </androidx.cardview.widget.CardView>
+            android:text="10 miles"/>
+        <RadioButton
+            android:id="@+id/rb25miles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="25 miles"/>
+        <RadioButton
+            android:id="@+id/rb50miles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="50 miles"/>
+        <RadioButton
+            android:id="@+id/rb100miles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100 miles"/>
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/btnSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rgSearchRadius"
+        android:layout_centerHorizontal="true"
+        android:text="search!"/>
 
 </RelativeLayout>
