--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,7 +16,7 @@
         android:id="@+id/tvSearchDistanceInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search for experiences within:"
+        android:text="Search for experiences within this many miles:"
         android:layout_below="@id/autocomplete_fragment"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"/>
@@ -27,27 +27,38 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvSearchDistanceInfo"
         android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
         <RadioButton
             android:id="@+id/rb10miles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10 miles"/>
+            android:layout_marginEnd="5dp"
+            android:text="10"/>
         <RadioButton
             android:id="@+id/rb25miles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="25 miles"/>
+            android:layout_marginEnd="5dp"
+            android:text="25"/>
         <RadioButton
             android:id="@+id/rb50miles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="50 miles"/>
+            android:layout_marginEnd="5dp"
+            android:text="50"/>
         <RadioButton
             android:id="@+id/rb100miles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100 miles"/>
+            android:layout_marginEnd="5dp"
+            android:text="100"/>
+        <RadioButton
+            android:id="@+id/rbDefault"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+            android:text="Default"/>
     </RadioGroup>
 
     <Button
