--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -53,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivImageOne"
+        android:layout_marginTop="16dp"
         android:layout_alignParentStart="true"
         android:text="Start Date"/>
 
@@ -70,6 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivImageOne"
+        android:layout_marginTop="16dp"
         android:layout_alignParentEnd="true"
         android:text="End Date"/>
 
