--- a/app/src/main/res/layout/activity_experience_details.xml
+++ b/app/src/main/res/layout/activity_experience_details.xml
@@ -41,11 +41,45 @@
         android:layout_toEndOf="@id/ivDetailsImageOne"
         android:src="@drawable/photo_blank" />
 
+    <TextView
+        android:id="@+id/tvStartDateTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ivDetailsImageOne"
+        android:layout_marginTop="16dp"
+        android:text="Start Date:"/>
+
+    <TextView
+        android:id="@+id/tvStartDateDetails"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/tvStartDateTitle"
+        android:layout_toEndOf="@id/tvStartDateTitle"
+        android:layout_marginStart="2dp"/>
+
+    <TextView
+        android:id="@+id/tvEndDateTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tvStartDateTitle"
+        android:text="End Date: "/>
+
+    <TextView
+        android:id="@+id/tvEndDateDetails"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/tvEndDateTitle"
+        android:layout_toEndOf="@+id/tvEndDateTitle"
+        android:layout_marginStart="2dp"/>
+
     <Button
         android:id="@+id/btnDetailsConnectHost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ivDetailsImageOne"
+        android:layout_below="@id/tvEndDateTitle"
+        android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true"
         android:text="connect with host!" />
 
