created chat fragment, conversations adapter to display latest conversations

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -13,6 +13,11 @@
         android:title="Create"
         app:showAsAction="always" />
     <item
+        android:id="@+id/action_chat"
+        android:icon="@drawable/chat"
+        android:title="Chat"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_profile"
         android:icon="@drawable/profile"
         android:title="Profile"
