--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
     tools:context=".LoginActivity">
 
     <EditText
@@ -12,6 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Username" />
 
@@ -20,19 +22,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_below="@id/etUsername"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword" />
 
-    <Button
+    <com.royrodriguez.transitionbutton.TransitionButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_centerHorizontal="true"
+        android:text="Login"
+        app:defaultColor="#AD7DD0"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_below="@id/etPassword"
-        android:text="Login" />
+        android:layout_centerHorizontal="true"
+        app:loaderColor="@android:color/white"
+        android:textColor="@android:color/white"/>
 
     <TextView
         android:id="@+id/tvSignUp"
@@ -40,6 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="18dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="250dp"
         android:layout_below="@id/btnLogin"
@@ -47,11 +57,13 @@
 
     <Button
         android:id="@+id/btnSignUp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/tvSignUp"
-        android:text="Sign Up" />
+        android:text="Sign Up"/>
 
 </RelativeLayout>
