--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
         app:defaultColor="#AD7DD0"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
         android:layout_below="@id/etPassword"
         android:layout_centerHorizontal="true"
         app:loaderColor="@android:color/white"
@@ -55,13 +56,17 @@
         android:layout_below="@id/btnLogin"
         android:text="No account? No worries!" />
 
-    <Button
+    <com.royrodriguez.transitionbutton.TransitionButton
         android:id="@+id/btnSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        app:defaultColor="#AD7DD0"
+        app:loaderColor="@android:color/white"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/tvSignUp"
         android:text="Sign Up"/>
