--- a/app/src/main/res/layout/item_experience.xml
+++ b/app/src/main/res/layout/item_experience.xml
@@ -6,6 +6,7 @@
     android:layout_marginBottom="8dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
+    card_view:cardCornerRadius="10dp"
     card_view:cardBackgroundColor="#FFFFFF">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -31,7 +32,6 @@
             android:layout_below="@id/ivCoverPic"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             tools:text="Experience Title" />
 
@@ -43,6 +43,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
+            android:maxLines="2"
+            android:ellipsize="end"
             tools:text="description goes here!" />
 
     </RelativeLayout>
