--- a/app/src/main/res/layout/activity_experience_details.xml
+++ b/app/src/main/res/layout/activity_experience_details.xml
@@ -46,7 +46,8 @@
         android:layout_width="180dp"
         android:layout_height="240dp"
         android:layout_below="@id/tvDetailsDescription"
-        android:layout_marginStart="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
         android:src="@drawable/photo_blank" />
@@ -55,18 +56,27 @@
         android:id="@+id/tvDetailsDates"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="16dp"
-        android:layout_toEndOf="@id/ivDetailsImageTwo"
         android:layout_alignTop="@id/ivDetailsImageTwo"
-        android:background="@drawable/background_box"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginEnd="16dp"
+        android:layout_toStartOf="@+id/ivDetailsImageTwo"
+        android:background="@drawable/background_box"
+        android:gravity="center_horizontal"
+        android:textSize="16dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/tvDetailsDates"
+        android:layout_alignStart="@id/tvDetailsDates"
+        android:layout_marginTop="47dp"
+        android:layout_marginStart="65dp"
+        android:src="@drawable/calendar"/>
 
     <ImageView
         android:id="@+id/ivDetailsHostPic"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:src="@drawable/photo_blank"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
@@ -83,7 +93,7 @@
         android:layout_marginStart="8dp"
         android:layout_toEndOf="@id/ivDetailsHostPic"
         android:textSize="16dp"
-        tools:text="hosted by user" />
+        tools:text="Hosted by user." />
 
     <TextView
         android:id="@+id/tvConnectHost"
@@ -103,13 +113,16 @@
         android:id="@+id/btnDetailsLocate"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/ivDetailsImageTwo"
         android:layout_below="@id/tvDetailsDates"
         android:layout_alignBottom="@id/ivDetailsImageTwo"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="-5dp"
+        android:layout_toStartOf="@+id/ivDetailsImageTwo"
+        android:paddingBottom="15dp"
+        android:paddingTop="8dp"
+        android:drawableBottom="@drawable/locate_experience"
         android:text="locate" />
 
     <ImageButton
@@ -129,6 +142,7 @@
         android:layout_height="48dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="8dp"
         android:background="@android:color/transparent"
         android:foregroundTint="@color/white"
         android:src="@drawable/delete_experience"/>
@@ -139,6 +153,7 @@
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="8dp"
         android:background="@android:color/transparent"
         android:foregroundTint="@color/white"
         android:src="@drawable/remove_commitment"/>
