--- a/app/src/main/res/drawable/delete_experience.xml
+++ b/app/src/main/res/drawable/delete_experience.xml
@@ -1,10 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="@color/white">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2L18,7L6,7v12zM8.46,11.88l1.41,-1.41L12,12.59l2.12,-2.12 1.41,1.41L13.41,14l2.12,2.12 -1.41,1.41L12,15.41l-2.12,2.12 -1.41,-1.41L10.59,14l-2.13,-2.12zM15.5,4l-1,-1h-5l-1,1L5,4v2h14L19,4z"/>
+<vector android:height="48dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="48dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="m424,64h-88v-16c0,-26.467 -21.533,-48 -48,-48h-64c-26.467,0 -48,21.533 -48,48v16h-88c-22.056,0 -40,17.944 -40,40v56c0,8.836 7.164,16 16,16h8.744l13.823,290.283c1.221,25.636 22.281,45.717 47.945,45.717h242.976c25.665,0 46.725,-20.081 47.945,-45.717l13.823,-290.283h8.744c8.836,0 16,-7.164 16,-16v-56c0,-22.056 -17.944,-40 -40,-40zM208,48c0,-8.822 7.178,-16 16,-16h64c8.822,0 16,7.178 16,16v16h-96zM80,104c0,-4.411 3.589,-8 8,-8h336c4.411,0 8,3.589 8,8v40c-4.931,0 -331.567,0 -352,0zM393.469,464.761c-0.407,8.545 -7.427,15.239 -15.981,15.239h-242.976c-8.555,0 -15.575,-6.694 -15.981,-15.239l-13.751,-288.761h302.44z"/>
+    <path android:fillColor="@android:color/white" android:pathData="m256,448c8.836,0 16,-7.164 16,-16v-208c0,-8.836 -7.164,-16 -16,-16s-16,7.164 -16,16v208c0,8.836 7.163,16 16,16z"/>
+    <path android:fillColor="@android:color/white" android:pathData="m336,448c8.836,0 16,-7.164 16,-16v-208c0,-8.836 -7.164,-16 -16,-16s-16,7.164 -16,16v208c0,8.836 7.163,16 16,16z"/>
+    <path android:fillColor="@android:color/white" android:pathData="m176,448c8.836,0 16,-7.164 16,-16v-208c0,-8.836 -7.164,-16 -16,-16s-16,7.164 -16,16v208c0,8.836 7.163,16 16,16z"/>
 </vector>
