--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,16 +6,68 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+    <TextView
+        android:id="@+id/tvWelcomeTo"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="32dp"
+        android:text="Welcome to "/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#4a3352"
+        android:textStyle="bold"
+        android:textSize="32dp"
+        android:layout_alignTop="@id/tvWelcomeTo"
+        android:layout_toEndOf="@id/tvWelcomeTo"
+        android:text="Gem."/>
+
+    <ImageView
+        android:layout_below="@id/tvWelcomeTo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="56dp"
+        app:tint="#4a3352"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/gem"/>
+
+    <TextView
+        android:id="@+id/LoginUpUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Username"
+        android:textSize="16dp"
+        android:layout_below="@id/tvWelcomeTo"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="280dp"/>
+
     <EditText
         android:id="@+id/etUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/LoginUpUsername"
         android:layout_weight="1"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/background_box"
         android:ems="10"
         android:hint="Username" />
+
+    <TextView
+        android:id="@+id/LoginPassOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password"
+        android:textSize="16dp"
+        android:layout_below="@id/etUsername"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"/>
 
     <EditText
         android:id="@+id/etPassword"
@@ -24,7 +76,9 @@
         android:layout_weight="1"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_below="@id/etUsername"
+        android:layout_marginTop="8dp"
+        android:layout_below="@id/LoginPassOne"
+        android:background="@drawable/background_box"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword" />
@@ -34,10 +88,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
-        app:defaultColor="#AD7DD0"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_below="@id/etPassword"
         android:layout_centerHorizontal="true"
         app:loaderColor="@android:color/white"
@@ -49,26 +102,22 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="18dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="45dp"
         android:layout_below="@id/btnLogin"
-        android:text="No account? No worries!" />
+        android:text="Don't have an account?" />
 
-    <com.royrodriguez.transitionbutton.TransitionButton
+    <TextView
         android:id="@+id/btnSignUp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        app:defaultColor="#AD7DD0"
-        app:loaderColor="@android:color/white"
-        android:textColor="@android:color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/tvSignUp"
-        android:text="Sign Up"/>
+        android:clickable="true"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:layout_marginStart="4dp"
+        android:textColor="#4a3352"
+        android:layout_toEndOf="@id/tvSignUp"
+        android:layout_alignBottom="@id/tvSignUp"
+        android:text="Sign Up!"/>
 
 </RelativeLayout>
